# embedded-tutorial-with-rp2040

./: .clang-format  .gitignore  README.org
c-demos/: cmake-build-process.org
c-demos/blinking-led/: CMakeLists.txt  README.org  build.sh
c-demos/blinking-led-bare-metal/src/: blinking-led.c
c-demos/blinking-led-register/: CMakeLists.txt  README.md  README.org  bare-metal-build.sh  configure.sh  flash_linux.sh  minicom.sh
c-demos/blinking-led-register/src/: bits.h  blinking-led.c  data_types.h  log.c  log.h  rp2040_reg.c  rp2040_reg.h
c-demos/blinking-led-register/src/register/: reset.c  reset.h
c-demos/blinking-led/src/: blinking-led.c
c-demos/print-pointer-address/: CMakeLists.txt  README.org  flash_linux_sda.sh  flash_macos.sh
c-demos/print-pointer-address/src/: print-pointer-address.c
tutorial/: .#4-3-a-blinking-led-by-rp2040-register.org  1-glossary-of-terms.org  2-1-basic-concepts.org  2-2-well-known-mcu-families.org  2-3-mcu-memory.org  2-4-memory-layout.org  3-1-a-install-arm-gnu-toolchain.org  3-1-b-setup-pico-sdk.org  3-1-c-setup-pico-examples.org  4-1-a-bitwise-to-control-mcu-register.org  4-1-a-how-does-your-program-tells-mcu-what-to-do.org  4-2-a-bitwise-to-control-mcu-register.org  4-3-a-blinking-led-by-rp2040-register.org  5-1-a-why-sdk-enable-all-peripherals-by-default.org  5-2-a-how-printf-print-to-usb-and-uart.org  5-3-a-solve-losing-printf-content.org  5-5-a-how-your-main-gets-called.org  6-1-a-how-spi-works.org  7-1-a-how-interrupt-works.org  7-2-how-to-write-arm-startup-file-and-linker-script.org  basic-concepts.org  glossary-of-terms.org
zig-demos/: CMakeLists.txt  README.org  build.zig  flash_linux.sh  flash_macos.sh  minicom.sh
zig-demos/blink/: CMakeLists.txt  README.org  build.zig  flash_linux.sh  flash_macos.sh
zig-demos/blink-register/: CMakeLists.txt  README.org  build.zig  flash_linux.sh  flash_macos.sh
zig-demos/blink-register/src/: main.zig
zig-demos/blink/src/: main.zig
zig-demos/src/: oled-1351-demo.cmake  oled-1351-demo.zig  ps-joystick-demo.cmake  ps-joystick-demo.zig  touch-switch-button-demo.cmake  touch-switch-button-demo.zig  zig-blink-builtin-led.cmake  zig-blink-builtin-led.zig  zig-blink-register.cmake  zig-blink-register.zig
zig-demos/src/utils/: bits.zig
zig-demos/src/utils/driver/button/: touch-switch-button.zig
zig-demos/src/utils/driver/joystick/: ps-joystick.zig
zig-demos/src/utils/driver/oled/: font12x16.zig  font16x16.zig  font8x8_basic.zig  font8x8_topaz.zig  ssd1351.zig
zig-demos/src/utils/pico-sdk-bindings/: spi.zig
zig-demos/src/utils/register/: common.zig  reset.zig
